# klipper-advanced-shaper

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: advanced_shaper_macros.cfg
docs/: README.md  architecture.md  benchmarking.md  experimental-generalized-mzv.md  installation.md  live-evidence-2026-07-19.md  privacy.md  reports.md  third-party.md
docs/macros/: advanced_shaper_calibrate.md  result_workflow.md
scripts/: __init__.py  advanced_input_shaper.py  install.sh  uninstall.sh  update.sh  verify_public_tree.py
src/klipper_advanced_shaper/: __init__.py  artifacts.py  shapers.py  worker_child.py
src/klipper_advanced_shaper/analysis/: __init__.py  experimental.py  facade.py  models.py  modes.py  non_regression.py  selection.py  signal.py  spectral.py  statistics.py
src/klipper_advanced_shaper/klippy/: __init__.py  adapter.py  capture.py  excitation.py  plugin.py  state.py  worker.py
tests/: test_packaging_contract.py  test_public_tree.py
tests/integration/: test_klippy_plugin.py
tests/unit/: test_analysis_core.py  test_artifacts.py  test_experimental.py  test_facade.py  test_klipper_compatibility.py  test_macro_ux.py  test_non_regression.py  test_shapers.py  test_state_machine.py
