[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klipper-advanced-shaper"
version = "0.1.0a1"
description = "Fail-closed, evidence-driven input-shaper calibration for Klipper"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [{ name = "Fishyfabspnw" }]
keywords = ["klipper", "3d-printing", "input-shaping", "accelerometer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21", "matplotlib>=3.5"]

[project.optional-dependencies]
test = [
  "build>=1.2",
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Fishyfabspnw/klipper-advanced-shaper"
Issues = "https://github.com/Fishyfabspnw/klipper-advanced-shaper/issues"
Source = "https://github.com/Fishyfabspnw/klipper-advanced-shaper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
